it builds cleanly

--- a/misc/packaging/starship-ubuntu-22-24-package/Makefile
+++ b/misc/packaging/starship-ubuntu-22-24-package/Makefile
@@ -9,7 +9,7 @@ build/.exists:
 
 # download helper program
 build/simple-deb-4j-all.jar: build/.exists
-	cd build && wget -N https://github.com/alexanderankin/simple-deb-4j/releases/download/v0.0.4/simple-deb-4j-all.jar
+	cd build && wget -N https://github.com/alexanderankin/simple-deb-4j/releases/download/v0.0.4/simple-deb-4j-all.jar && cd .. && touch $@
 
 # download original package
 build/original.zip: build/.exists
@@ -23,8 +23,12 @@ build/config.yaml: config.yaml build/.exists build/original_version.txt
 	cat config.yaml | yaml2json | jq '.meta.version = "'$(shell cat ./build/original_version.txt)'"' | json2yaml > $@
 
 build/files: build/original.zip
-	cd build && mkdir -p data-files && unzip -f -d data-files original.zip && cd data-files/original && ar xf *.deb && tar xaf data.*
+	cd build && mkdir -p data-files && unzip -o -d data-files original.zip && cd data-files/original && ar xf *.deb && tar xaf data.* && cd ../../../ && touch $@
 
 # repackage release
 build/deb.zip: build/simple-deb-4j-all.jar build/config.yaml build/files
 	cd build && [[ -f ~/.sdkman/bin/sdkman-init.sh ]] && . ~/.sdkman/bin/sdkman-init.sh; java -jar ./simple-deb-4j-all.jar b -c ./config.yaml -o ./ && zip deb.zip ./*.deb
+
+.PHONY: clean
+clean:
+	rm -rf build
