--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,8 @@ include 'cloud:util:tracing-guide'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-model'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-protocol'
+include 'cloud:vm:qemu-cloud-init'
+include 'cloud:vm:vagrant'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
