--- a/cloud/vm/qemu-cloud-init/Makefile
+++ b/cloud/vm/qemu-cloud-init/Makefile
@@ -43,4 +43,12 @@ start_vm: build/vm.img build/seed.iso
 	  -display none \
 	  -serial mon:stdio
 
-#  -nic tap \
+#	  # from vagrant:
+#	  -netdev tap,fd=33,vhost=true,vhostfd=35,id=hostua-net-0 \
+#	  -device virtio-net-pci,netdev=hostua-net-0,id=ua-net-0,mac=52:54:00:01:01:01,bus=pci.0,addr=0x5 \
+#	  -netdev tap,fd=36,vhost=true,vhostfd=37,id=hostua-net-1 \
+#	  -device virtio-net-pci,netdev=hostua-net-1,id=ua-net-1,mac=52:54:00:01:01:02,bus=pci.0,addr=0x6 \
+#
+#	  # adapted from vagrant:
+#	  -netdev tap,id=net1,ifname=tap0 \
+#	  -device virtio-net-pci,netdev=net1 \
