--- a/misc/totp4j/build.gradle
+++ b/misc/totp4j/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id 'spring-conventions'
-    id 'application'
-    id 'com.gradleup.shadow' version '8.3.5'
+    id 'picocli-conventions'
 }
 
 // so it can run everywhere else
@@ -15,6 +13,4 @@ application { mainClass.set('totp4j.cli.Totp4j') }
 dependencies {
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     implementation 'commons-codec:commons-codec:1.17.1'
-    implementation 'info.picocli:picocli:4.7.5'
-    annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
 }
