--- a/misc/executable-jar-file-trick/build.gradle
+++ b/misc/executable-jar-file-trick/build.gradle
@@ -4,9 +4,12 @@ import java.nio.file.StandardOpenOption
 import java.nio.file.attribute.PosixFilePermissions
 
 plugins {
+    /*
     id 'java'
     id 'application'
     id 'com.gradleup.shadow' version '8.3.6'
+    */
+    id 'picocli-conventions'
 }
 
 repositories {
@@ -15,10 +18,12 @@ repositories {
 
 application.mainClass = 'org.example.Program'
 
+/*
 dependencies {
     implementation 'info.picocli:picocli:4.7.6'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
 }
+*/
 
 tasks.register('executableJar') {
     def inputFile = tasks.named('shadowJar').get().outputs.files.singleFile.toPath()
