clean up lwjgl so's

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,7 @@ include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-model'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-protocol'
 include 'cloud:vm:qemu-cloud-init'
-include 'cloud:vm:vagrant'
+// include 'cloud:vm:vagrant'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
@@ -40,9 +40,9 @@ include 'misc:packaging:gradle-to-maven'
 include 'misc:rate-limits'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
-include 'misc:reinforcement-learning-snake'
+// include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
-include 'misc:scratch:scratch-ffi'
+// include 'misc:scratch:scratch-ffi'
 include 'misc:totp4j'
 include 'misc:url-shortener'
