start learning about the camera

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'misc:bc-scratch'
 include 'misc:citation-management'
 include 'misc:executable-jar-file-trick'
 include 'misc:file-browser:file-browser-frontend'
+include 'misc:game-dev:jme-examples'
 include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:packaging:debian'
