--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
 include 'cloud:aws:lambda-runtime-client'
+include 'cloud:oci:oci-helpers'
 include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:tf:tf-ideas:tf-idea1'
@@ -27,6 +28,7 @@ include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
+include 'lib:picocli-lib'
 include 'misc:azure-things:azure-data-things'
 include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:bc-scratch'
