realize we need to do a cab thing

--- a/buildPlugins/src/main/groovy/conventions.gradle
+++ b/buildPlugins/src/main/groovy/conventions.gradle
@@ -51,6 +51,18 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation 'org.slf4j:slf4j-api:2.0.17'
+    constraints {
+        [
+                ['org.slf4j:slf4j-api', '2.0.17'],
+        ].each { l ->
+            ['implementation'].each { String c ->
+                add(c, l.getFirst()) { version { prefer l.getLast() } }
+            }
+        }
+    }
+
     constraints {
         [
                 ['org.projectlombok:lombok', '1.18.30'],
