--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,7 @@ include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:packaging:debian'
 include 'misc:packaging:gradle-to-maven'
+include 'misc:packaging:msi'
 include 'misc:rate-limits'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
