--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'misc:azure-things:azure-data-things'
 include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:bc-scratch'
 include 'misc:citation-management'
+include 'misc:copy-token'
 include 'misc:executable-jar-file-trick'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:mc:mc-plugins:mc-first-plugin'
