send email with mailgun

--- a/settings.gradle
+++ b/settings.gradle
@@ -47,5 +47,6 @@ include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
 include 'misc:scratch:scratch-ffi'
+include 'misc:scratch:send-email-mailgun'
 include 'misc:totp4j'
 include 'misc:url-shortener'
