--- a/settings.gradle
+++ b/settings.gradle
@@ -46,6 +46,7 @@ include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
+include 'misc:scratch:pq-http-client'
 include 'misc:scratch:scratch-ffi'
 include 'misc:scratch:send-email-mailgun'
 include 'misc:totp4j'
