figure out how to use the real not the draft one

--- a/misc/scratch/pq-http-client/build.gradle
+++ b/misc/scratch/pq-http-client/build.gradle
@@ -1,4 +1,3 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
@@ -36,8 +35,12 @@ dependencies {
         implementation group: 'io.netty', name: 'netty-tcnative-boringssl-static', classifier: 'linux-x86_64'
     }
 
-    // https://repo1.maven.org/maven2/org/bouncycastle/bcpkix-jdk18on/
-    implementation 'org.bouncycastle:bcpkix-jdk18on:1.81'
+    // conventions
+    implementation 'org.bouncycastle:bcpkix-jdk18on'
 
     implementation project(':lib:picocli-lib')
+
+    // waiting for spring boot 3.6.x?
+    // https://github.com/spring-projects/spring-boot/commit/8077a0dfc3b0fc7a3470df05b7f3373903d7acad
+    // implementation 'io.netty:netty-pkitesting'
 }
