--- a/misc/copy-token/build.gradle
+++ b/misc/copy-token/build.gradle
@@ -8,6 +8,6 @@ dependencies {
     implementation 'com.nimbusds:nimbus-jose-jwt'
     implementation 'org.springframework.boot:spring-boot-starter-json'
 
-    // https://repo1.maven.org/maven2/org/bouncycastle/bcpkix-jdk18on/
-    implementation 'org.bouncycastle:bcpkix-jdk18on:1.81'
+    // conventions
+    implementation 'org.bouncycastle:bcpkix-jdk18on'
 }
