start working on understanding openssl

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
 include 'cloud:util:observability:alloy-example'
+include 'cloud:util:pki:openssl-cli-api'
+include 'cloud:util:pki:self-signed-ca-tool'
 include 'cloud:util:s3-api-emulator'
 include 'cloud:util:tracing-guide'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
