--- a/buildPlugins/src/main/groovy/picocli-conventions.gradle
+++ b/buildPlugins/src/main/groovy/picocli-conventions.gradle
@@ -11,15 +11,20 @@ plugins {
 dependencies {
     implementation 'info.picocli:picocli:4.7.7'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.7'
+    constraints {
+        implementation 'info.picocli:picocli-spring-boot-starter:4.7.7'
+    }
 
     implementation 'ch.qos.logback:logback-classic'
 }
+
+def projectName = project.name
 
 tasks.register('shadowJarExecutable') {
     def inputFile = tasks.named('shadowJar').get().outputs.files.singleFile.toPath()
     inputs.file inputFile
 
-    def outputFile = java.nio.file.Path.of(String.valueOf(inputFile).replace("-all.jar", "-executable.jar"))
+    def outputFile = inputFile.parent.resolve(projectName)
     outputs.file outputFile
 
     doLast {
