--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
 include 'cloud:aws:lambda-runtime-client'
+include 'cloud:aws:s3-presigned'
 include 'cloud:oci:oci-helpers'
 include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
