--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'cloud:tf:tf-ideas:tf-idea1'
 include 'cloud:tf:tf-ideas:tf-idea2'
 // include 'cloud:util:jdba-project:jdba'
 // include 'cloud:util:jdba-project:jdba-frontend'
+include 'cloud:util:ip-address'
 include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
