--- a/settings.gradle
+++ b/settings.gradle
@@ -52,6 +52,10 @@ include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
 include 'misc:scratch:pq-http-client'
 include 'misc:scratch:scratch-ffi'
+include 'misc:scratch:scratch-spring-auth-server'
+include 'misc:scratch:scratch-spring-auth-server:scratch-spring-auth-server-frontend'
+include 'misc:scratch:scratch-spring-auth-server-client'
+include 'misc:scratch:scratch-spring-auth-server-client:scratch-spring-auth-server-client-frontend'
 include 'misc:scratch:send-email-mailgun'
 include 'misc:totp4j'
 include 'misc:url-shortener'
