--- a/buildPlugins/build.gradle
+++ b/buildPlugins/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.node-gradle.node:com.github.node-gradle.node.gradle.plugin:7.1.0'
     implementation 'com.google.cloud.tools.jib:com.google.cloud.tools.jib.gradle.plugin:3.4.5'
     implementation 'com.gradleup.shadow:com.gradleup.shadow.gradle.plugin:8.3.6'
 }
