--- a/misc/reference-projects/spring-boot-react-todo-frontend/build.gradle
+++ b/misc/reference-projects/spring-boot-react-todo-frontend/build.gradle
@@ -1,7 +1,7 @@
 import java.util.concurrent.TimeUnit
 
 plugins {
-    id 'com.github.node-gradle.node' version '7.1.0'
+    id 'node-gradle-conventions'
 }
 
 node {
