--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ include 'misc:projects:packaging:starship-ubuntu-22-24-package'
 include 'misc:projects:rate-limits'
 include 'misc:projects:reinforcement-learning-snake'
 include 'misc:projects:totp4j'
+include 'misc:projects:json-converters'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:scratch:bc-scratch'
