--- a/misc/projects/json-converters/pyproject.toml
+++ b/misc/projects/json-converters/pyproject.toml
@@ -11,6 +11,9 @@ requires-python = ">=3.11"
 [tool.poetry.dependencies]
 PyYAML = "^6.0.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+
 [tool.poetry.scripts]
 json-conv = "json_conv.cli:main"
 json2yaml = "json_conv.cli:main"
