--- a/misc/auth-scratch/simple/simple-scratch-auth-client/build.gradle
+++ b/misc/auth-scratch/simple/simple-scratch-auth-client/build.gradle
@@ -1,3 +1,16 @@
 plugins {
     id 'spring-conventions'
 }
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+
+    implementation 'org.springframework.session:spring-session-jdbc'
+    runtimeOnly 'com.h2database:h2'
+}
+
+// implementation 'org.springframework.boot:spring-boot-starter-security'
