discord oauth client application

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'lib:picocli-lib'
+include 'misc:auth-scratch:discord-client'
 include 'misc:auth-scratch:simple:simple-scratch-auth-client'
 include 'misc:auth-scratch:simple:simple-scratch-auth-server'
 include 'misc:azure-things:azure-data-things'
