--- a/misc/auth-scratch/discord-client/build.gradle
+++ b/misc/auth-scratch/discord-client/build.gradle
@@ -15,7 +15,9 @@ dependencies {
     // implementation 'org.springframework.security:spring-security-oauth2-resource-server'
 
     implementation 'org.springframework.session:spring-session-jdbc'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.liquibase:liquibase-core'
+    runtimeOnly 'org.postgresql:postgresql'
 
     implementation 'org.apache.commons:commons-collections4:4.5.0'
 }
