--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-model'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-protocol'
 include 'cloud:vm:qemu-cloud-init'
+include 'cloud:vm:lxc'
 include 'cloud:vm:vagrant'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
