--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,8 @@ include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'lib:picocli-lib'
 include 'misc:auth-scratch:discord-client'
+include 'misc:auth-scratch:discord-client:discord-client-auth-server'
+include 'misc:auth-scratch:session-oauth-delegating:session-oauth-delegating-1'
 include 'misc:auth-scratch:simple:simple-scratch-auth-client'
 include 'misc:auth-scratch:simple:simple-scratch-auth-server'
 include 'misc:azure-things:azure-data-things'
