--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,12 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+
+        // for android stuff :(((((
+        google()
+    }
+}
+
 rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
@@ -67,4 +76,9 @@ include 'misc:scratch:pq-http-client'
 include 'misc:scratch:rxjava3-scratch'
 include 'misc:scratch:scratch-ffi'
 include 'misc:scratch:send-email-mailgun'
+
+// android :(((((
+if (file('local.properties').exists())
+    include 'misc:scratch:timber-scratch'
+
 include 'misc:socat-logging'
