wrap up this horrible chapter of this project

--- a/cloud/util/observability/loki-experiments/loki-docker-compose/compose.yaml
+++ b/cloud/util/observability/loki-experiments/loki-docker-compose/compose.yaml
@@ -1,7 +1,7 @@
 #file: noinspection HttpUrlsUsage
 ---
 networks:
-  loki:
+  loki_network:
 
 services:
   read:
@@ -21,7 +21,7 @@ services:
       timeout: 5s
       retries: 5
     networks: &loki-dns
-      loki:
+      loki_network:
         aliases:
           - loki
 
@@ -43,19 +43,6 @@ services:
       - minio
     networks:
       <<: *loki-dns
-
-  alloy:
-    image: grafana/alloy:latest
-    volumes:
-      - ./alloy-local-config.alloy:/etc/alloy/config.alloy:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
-    ports:
-      - "12345:12345"
-    depends_on:
-      - gateway
-    networks:
-      - loki
 
   minio:
     image: minio/minio
@@ -81,7 +68,7 @@ services:
       timeout: 20s
       retries: 5
     networks:
-      - loki
+      - loki_network
 
   grafana:
     image: grafana/grafana:latest
@@ -103,12 +90,26 @@ services:
             type: loki
             access: proxy
             url: http://gateway:3100
-            jsonData:
-              httpHeaderName1: "X-Scope-OrgID"
+            basicAuth: true
+            basicAuthUser: user
             secureJsonData:
-              httpHeaderValue1: "tenant1"
+              basicAuthPassword: pass
         EOF
         /run.sh
+
+      #    - name: Prometheus
+      #      type: prometheus
+      #      access: proxy
+      #      url: http://prometheus:9090
+
+      #    - name: Tempo
+      #      type: tempo
+      #      access: proxy
+      #      url: http://tempo:3200
+      #      jsonData:
+      #        httpMethod: GET
+      #        serviceMap:
+      #          datasourceUid: prometheus
     ports:
       - "3000:3000"
     healthcheck:
@@ -117,7 +118,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - loki
+      - loki_network
 
   backend:
     image: grafana/loki:latest
@@ -130,7 +131,7 @@ services:
     depends_on:
       - gateway
     networks:
-      - loki
+      - loki_network
 
   gateway:
     image: nginx:alpine-slim
@@ -199,10 +200,4 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - loki
-
-  flog:
-    image: mingrammer/flog
-    command: -f json -d 2000ms -l
-    networks:
-      - loki
+      - loki_network
