--- a/cloud/util/observability/loki-experiments/loki-docker-compose/loki-config.yaml
+++ b/cloud/util/observability/loki-experiments/loki-docker-compose/loki-config.yaml
@@ -51,3 +51,5 @@ compactor:
 # https://grafana.com/docs/loki/latest/reference/loki-http-api/#query-log-volume
 limits_config:
   volume_enabled: true
+
+auth_enabled: false
