--- a/cloud/util/observability/grafana-stack/grafana-observability-service/compose.yaml
+++ b/cloud/util/observability/grafana-stack/grafana-observability-service/compose.yaml
@@ -102,6 +102,7 @@ services:
         EOF
         exec /bin/prometheus \
           --config.file=/etc/prometheus/prometheus.yml \
+          --web.enable-remote-write-receiver \
           --storage.tsdb.path=/prometheus
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:9090/-/healthy"]
@@ -119,26 +120,36 @@ services:
   tempo:
     image: grafana/tempo:latest
     command: ["-config.file=/etc/tempo.yaml"]
+    user: root
     entrypoint:
       - sh
       - -euc
       - |
         cat > /etc/tempo.yaml <<EOF
         server:
+          log_level: info
           http_listen_port: 3200
+          grpc_listen_port: 9095
           # http_tls_config:
           #   cert_file: /etc/tempo/certs/tls.crt
           #   key_file: /etc/tempo/certs/tls.key
-          http_basic_auth:
-            username: tempo
-            password: supersecret
+
+        storage:
+          trace:
+            backend: local # backend configuration to use
+            wal:
+              path: /var/tempo/wal # where to store the wal locally
+            local:
+              path: /var/tempo/blocks
 
         distributor:
           receivers:
             otlp:
               protocols:
-                http:
                 grpc:
+                  endpoint: "0.0.0.0:4317"
+                http:
+                  endpoint: "0.0.0.0:4318"
 
         ingester:
           trace_idle_period: 10s
@@ -148,20 +159,25 @@ services:
           compaction:
             block_retention: 1h
 
-        storage:
-          trace:
-            backend: local
-            local:
-              path: /tmp/tempo/traces
+        querier:
+          frontend_worker:
+            frontend_address: 127.0.0.1:9095
+
+        usage_report:
+          reporting_enabled: false
         EOF
-        exec /tempo
+
+        exec /tempo -config.file=/etc/tempo.yaml
+    depends_on:
+      - minio
     # volumes:
     #   - ./tempo.yaml:/etc/tempo.yaml:ro
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3200/metrics"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "wget", "-q", "http://localhost:3200/status"]
+      interval: 5s
+      timeout: 2s
+      retries: 120
+    stop_grace_period: 20s
     networks:
       - grafana_network
 
@@ -229,6 +245,17 @@ services:
     networks:
       - grafana_network
 
+  gateway_genauth:
+    image: alpine/openssl:3.5.3
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        printf "user:$(openssl passwd -6 pass)\n" > /secrets/.htpasswd
+        exec tail -f /dev/null
+    volumes:
+      - secrets:/secrets
+
   gateway:
     image: nginx:alpine-slim
     depends_on:
@@ -238,6 +265,11 @@ services:
       - sh
       - -euc
       - |
+        while [ ! -f /secrets/.htpasswd ]; do
+          echo "waiting for /secrets/.htpasswd..."
+          sleep 1
+        done
+
         cat <<EOF > /etc/nginx/nginx.conf
         user  nginx;
         worker_processes  5;  ## Default: 1
@@ -288,6 +320,16 @@ services:
             location ~ /metrics/job/.* {
               proxy_pass       http://pushgateway:9091\$$request_uri;
             }
+
+            location /tempo/v1/traces {
+              proxy_pass       http://tempo:3200/v1/traces;
+            }
+
+            location /prometheus/api/v1/write {
+              auth_basic           "Restricted";
+              auth_basic_user_file "/secrets/.htpasswd";
+              proxy_pass           http://prometheus:9090/api/v1/write;
+            }
           }
         }
         EOF
@@ -301,3 +343,8 @@ services:
       retries: 5
     networks:
       - grafana_network
+    volumes:
+      - secrets:/secrets
+
+volumes:
+  secrets:
