--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,8 @@ include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
 include 'cloud:util:observability:alloy-example'
+include 'cloud:util:observability:grafana-stack:gos-test-simple'
+include 'cloud:util:observability:loki-experiments'
 include 'cloud:util:pki:openssl-cli-api'
 include 'cloud:util:pki:self-signed-ca-tool'
 include 'cloud:util:s3-api-emulator'
