update - wow gradle did a good

--- a/buildPlugins/src/main/groovy/conventions.gradle
+++ b/buildPlugins/src/main/groovy/conventions.gradle
@@ -110,3 +110,6 @@ check.dependsOn integrationTest
 
 // use junit for all tests
 tasks.withType(Test).configureEach { t -> t.useJUnitPlatform() }
+
+// patch for java changes
+tasks.withType(JavaCompile).configureEach { options.compilerArgs.add '-parameters' }
