also send smtp stuff now

--- a/misc/scratch/send-email-mailgun/build.gradle
+++ b/misc/scratch/send-email-mailgun/build.gradle
@@ -8,4 +8,5 @@ application.mainClass = 'side.SendEmailWithMailgun'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
