--- a/misc/scratch/send-email-mailgun/build.gradle
+++ b/misc/scratch/send-email-mailgun/build.gradle
@@ -9,4 +9,5 @@ application.mainClass = 'side.SendEmailWithMailgun'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.slf4j:jul-to-slf4j'
 }
