sentry demo and other stuff

--- a/lib/picocli-lib/build.gradle
+++ b/lib/picocli-lib/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'picocli-conventions'
+    id 'java-library'
 }
+
+version = '0.0.1'
 
 application.mainClass.set 'java.util.prefs.Base64'
