initial mc mgmt

--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:copy-token'
 include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
+include 'misc:mc:mc-server'
 include 'misc:projects:apps:citation-management'
 include 'misc:projects:apps:file-browser:file-browser-frontend'
 include 'misc:projects:apps:resume-generator-linkedin'
