--- a/misc/mc/mc-server/build.gradle
+++ b/misc/mc/mc-server/build.gradle
@@ -9,8 +9,10 @@ plugins {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.data:spring-data-commons'
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
 }
 
 node {
