--- a/misc/mc/mc-server/src/main/web/package.json
+++ b/misc/mc/mc-server/src/main/web/package.json
@@ -10,11 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@mui/x-data-grid": "^8.18.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.90.2",
+    "bootstrap": "^5.3.8",
+    "classnames": "^2.5.1",
+    "immer": "^10.1.3",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.64.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.3",
+    "superstruct": "^2.0.2",
+    "un": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
