--- a/cloud/util/registry/Makefile
+++ b/cloud/util/registry/Makefile
@@ -1,3 +1,5 @@
+all: cert.pem key.pem .htpasswd
+
 cert.pem key.pem:
 	openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -sha256 -days 3650 -nodes -subj "/C=XX/ST=StateName/L=CityName/O=CompanyName/OU=CompanySectionName/CN=localhost.local"
 
