--- a/settings.gradle
+++ b/settings.gradle
@@ -75,6 +75,7 @@ include 'misc:projects:json-converters'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:scratch:bc-scratch'
+include 'misc:scratch:learning:learning-db:learning-pinot'
 include 'misc:scratch:pq-http-client'
 include 'misc:scratch:rxjava3-scratch'
 include 'misc:scratch:scratch-ffi'
