--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,7 @@ include 'cloud:util:nexus-guide'
 include 'cloud:util:observability:alloy-example'
 include 'cloud:util:observability:grafana-stack:gos-test-simple'
 include 'cloud:util:observability:loki-experiments'
+include 'cloud:util:packer-tool'
 include 'cloud:util:pki:openssl-cli-api'
 include 'cloud:util:pki:self-signed-ca-tool'
 include 'cloud:util:s3-api-emulator'
