--- a/misc/auth-scratch/casdoor/casdoor-compose/compose.yaml
+++ b/misc/auth-scratch/casdoor/casdoor-compose/compose.yaml
@@ -1,4 +1,11 @@
 services:
+  aux-files:
+    image: nginx:alpine-slim
+    ports:
+      - "8001:80"
+    volumes:
+      - ./files:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
   casdoor:
     image: "casbin/casdoor:2.196.1"
     ports:
@@ -7,6 +14,7 @@ services:
       driverName: mysql
       dataSourceName: "root:casdoor-root-password@tcp(mysql_db:3306)/"
       dbName: casdoor_db
+      runmode: prod
     entrypoint:
       - sh
       - "-c"
